<resources>
    <string name="app_name">Sanskar</string>

    //Introduction Messages
    <string name="intro_text_1">With the blessings of Indian Gurus and Saints, sanskar has ventured
    into a new concept of bringing all spritual thoughts.
  </string>
    <string name="intro_text_2">We are displaying videos as well as audio contents in a more user-friendly format to reach people
      24/7 from all over the world.
  </string>
    <string name="intro_text_3">All are invited to share their spiritual experiences by using Videos, Images and even Audio as well.
  </string>
    <string name="read_more">Read More</string>
    <string name="read_less">Read Less</string>
    <string name="enable_random_adaptation">Enable random adaptation</string>
    //Signup Login
    <string name="send_otp">SEND OTP</string>
    <string name="mobile">Mobile Number</string>

    <string name="enterOtp">Enter OTP code</string>
    <string name="otp_text">Sent via SMS to</string>
    <string name="otp_text_email">We have sent you an OTP code on your E-mail</string>
    <string name="resed_otp">Didn\'t receive the code? RESEND CODE</string>
    <string name="submit">submit</string>

    //API_KEYS

    <string name="api_keys_usable_gcp">ghanta</string>


    //API Hit
    <string name="internet_error">Connection error! Please try again</string>
    <string name="jsonparsing_error_message">Something went wrong with server</string>
    <string name="exception_api_error_message">Something went wrong kindly try again</string>
    <string name="allow">Allow</string>
    <string name="cancel">Cancel</string>
    <string name="pressAgain">PRESS ONCE AGAIN TO EXIT</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="newsnarticle"><![CDATA[News & Articles]]></string>
    <string name="news">News</string>
    <string name="sankirtan">Sankirtan</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="phoneNumber">Phone Number</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="about">About</string>
    <string name="facebook_app_id">803907630053077</string>
    <string name="fb_login_protocol_scheme">fb803907630053077</string>
    <string name="terms"><![CDATA[Terms & Conditions]]></string>
    <string name="privacypolicy"><![CDATA[Privacy & Policy]]></string>
    <string name="tncc"><![CDATA[Terms & Conditions]]></string>
    <string name="tncc1"><![CDATA[Privacy Policy]]></string>
    <string name="home">Home</string>
    <string name="ok">OK</string>
    <string name="logout_msg">Do you really want to logout?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="trending_now">Trending Now</string>
    <string name="view_all">View All</string>
    <string name="view_alll">Show More</string>
    <string name="dummy_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit</string>
    <string name="dummy_text_long">Lorem ipsum dolor sit amet, consectetur adipiscing elit Lorem ipsum dolor sit amet, consectetur adipiscing elit Lorem ipsum dolor sit amet, consectetur adipiscing elit Lorem ipsum dolor sit amet, consectetur adipiscing elit Lorem ipsum dolor sit amet, consectetur adipiscing elit Lorem ipsum dolor sit amet, consectetur adipiscing elit Lorem ipsum dolor sit amet, consectetur adipiscing elit Lorem ipsum dolor sit amet, consectetur adipiscing elit </string>
    <string name="dummy_text_long2">Lorem ipsum dolor sit amet, consectetur adipiscing elit Lorem ipsum dolor sit amet, consectetur adipiscing elit Lorem ipsum dolor sit amet, consectetur adipiscing elit Lorem ipsum dolor sit amet, consectetur adipiscing elit Lorem ipsum dolor sit amet, consectetur adipiscing elit Lorem ipsum dolor sit amet, consectetur adipiscing elit Lorem ipsum dolor sit amet, consectetur adipiscing elit Lorem ipsum dolor sit amet, consectetur adipiscing elit, consectetur adipiscing elit Lorem ipsum dolor sit amet, consectetur adipiscing elit Lorem ipsum dolor sit amet, consectetur adipiscing elit Lorem ipsum dolor sit amet, consectetur adipiscing elit Lorem ipsum dolor sit amet, consectetur adipiscing elit Lorem ipsum dolor sit amet, consectetur adipiscing elit Lorem ipsum dolor sit amet, consectetur adipiscing elit Lorem ipsum dolor sit amet, consectetur adipiscing elit Lorem ipsum dolor sit amet, consectetur adipiscing elit Lorem ipsum dolor sit amet, consectetur adipiscing elit Lorem ipsum dolor sit amet, consectetur adipiscing elit Lorem ipsum dolor sit amet, consectetur adipiscing elit Lorem ipsum dolor sit amet, consectetur adipiscing elit Lorem ipsum dolor sit amet, consectetur adipiscing elit Lorem ipsum dolor sit amet, consectetur adipiscing elit Lorem ipsum dolor sit amet, consectetur adipiscing elit Lorem ipsum dolor sit amet, consectetur adipiscing elit Lorem ipsum dolor sit amet, consectetur adipiscing elit Lorem ipsum dolor sit amet, consectetur adipiscing elit Lorem ipsum dolor sit amet, consectetur adipiscing elit Lorem ipsum dolor sit amet, consectetur adipiscing elit Lorem ipsum dolor sit amet, consectetur adipiscing elit Lorem ipsum dolor sit amet, consectetur adipiscing elit Lorem ipsum dolor sit amet, consectetur adipiscing elit Lorem ipsum dolor sit amet, consectetur adipiscing elit Lorem ipsum dolor sit amet, consectetur adipiscing elit Lorem ipsum dolor sit amet , consectetur adipiscing elit Lorem ipsum dolor sit amet, consectetur adipiscing elit Lorem ipsum dolor sit amet, consectetur adipiscing elit Lorem ipsum dolor sit amet, consectetur adipiscing elit Lorem ipsum dolor sit amet, consectetur adipiscing elit Lorem ipsum dolor sit amet, consectetur adipiscing elit Lorem ipsum dolor sit amet, consectetur adipiscing elit Lorem ipsum dolor sit amet, consectetur adipiscing elit Lorem ipsum dolor sit amet, consectetur adipiscing elit Lorem ipsum dolor sit amet, consectetur adipiscing elit Lorem ipsum dolor sit amet, consectetur adipiscing elit Lorem ipsum dolor sit amet, consectetur adipiscing elit Lorem ipsum dolor sit amet, consectetur adipiscing elit Lorem ipsum dolor sit amet, consectetur adipiscing elit Lorem ipsum dolor sit amet, consectetur adipiscing elit Lorem ipsum dolor sit amet, consectetur adipiscing elit Lorem ipsum dolor sit amet, consectetur adipiscing elit Lorem ipsum dolor sit amet, consectetur adipiscing elit Lorem ipsum dolor sit amet, consectetur adipiscing elit Lorem ipsum dolor sit amet, consectetur adipiscing elit Lorem ipsum dolor sit amet, consectetur adipiscing elit Lorem ipsum dolor sit amet, consectetur adipiscing elit Lorem ipsum dolor sit amet, consectetur adipiscing elit Lorem ipsum dolor sit amet, consectetur adipiscing elit Lorem ipsum dolor sit amet, consectetur adipiscing elit Lorem ipsum dolor sit amet, consectetur adipiscing elit Lorem ipsum dolor sit amet, consectetur adipiscing elit Lorem ipsum dolor sit amet, consectetur adipiscing elit Lorem ipsum dolor sit amet, consectetur adipiscing elit Lorem ipsum dolor sit amet, consectetur adipiscing elit Lorem ipsum dolor sit amet, consectetur adipiscing elit Lorem ipsum dolor sit amet, consectetur adipiscing elit Lorem ipsum dolor sit amet, consectetur adipiscing elit Lorem ipsum dolor sit amet, consectetur adipiscing elit Lorem ipsum dolor sit amet, consectetur adipiscing elit Lorem ipsum dolor sit amet, consectetur adipiscing elit Lorem ipsum dolor sit amet, consectetur adipiscing elit Lorem ipsum dolor sit amet, consectetur adipiscing elit Lorem ipsum dolor sit amet, consectetur adipiscing elit Lorem ipsum dolor sit amet, consectetur adipiscing elit Lorem ipsum dolor sit amet, consectetur adipiscing elit Lorem ipsum dolor sit amet, consectetur adipiscing elit Lorem ipsum dolor sit amet, consectetur adipiscing elit Lorem ipsum dolor sit amet, consectetur adipiscing elit Lorem ipsum dolor sit amet, consectetur adipiscing elit Lorem ipsum dolor sit amet, consectetur adipiscing elit Lorem ipsum dolor sit amet, consectetur adipiscing elit Lorem ipsum dolor sit amet, consectetur adipiscing elit Lorem ipsum dolor sit amet, consectetur adipiscing elit Lorem ipsum dolor sit amet, consectetur adipiscing elit Lorem ipsum dolor sit amet</string>
    <string name="gurus">Guru</string>
    <string name="bhajan">Bhajan</string>
    <string name="videos">Videos</string>
    <string name="share">Share</string>
    <string name="related_videos">Videos</string>
    <string name="related_audios">Audios</string>
    <string name="notification">Notification</string>
    <string name="no_data_found">No Data Found</string>
    <string name="follow">Follow</string>
    <string name="unfollow">Unfollow</string>
    <string name="no_internet">You are not connected to internet</string>
    <string name="post">Post</string>
    <string name="add_comment">Add a comment...</string>
    <string name="view_all_comments">View all %1$s  comments</string>
    <string name="go_live">Go Live</string>
    <string name="my_play_list">My Playlist</string>
    <string name="my_downloads">My Downloads</string>
    <string name="add_play_list">Add to playlist</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pin_content_desc">enter otp</string>
    <string name="liveTV">LiveTV</string>
    <string name="related_wallpaer">Wallpapers</string>
    <string name="spinner_title">spinner title</string>
    <string name="comments">Comments</string>

    <string name="descBackward">Prev Button</string>
    <string name="descForward">Next Button</string>
    <string name="timeProgressDefault">0:00</string>
    <string name="channel">Channel</string>
    <string name="show_queue">Show Queue</string>
    <string name="play_now">Play Now</string>
    <string name="play_next">Play Next</string>
    <string name="add_to_queue">Add to Queue</string>
    <string name="queue_item_added_to_play_next">An item was added to play next</string>
    <string name="queue_item_added_to_queue">An item was added to the queue</string>
    <string name="media_route_menu_title">Play on&#8230;</string>
    <string name="app_id">4F8B3483</string>
    <string name="video_cat_name">all</string>
    <string name="report">Report</string>
    <string name="related_about">About</string>
    <string name="related_image">Images</string>

    <string name="channel_description">This Notification Channel manages all the basic notifications of the Sanskar App</string>
    <string name="channel_name">Sanskar App Notification</string>
    <string name="clear_notifiaction">Do you really want to clear all notification?</string>
    <string name="premium">Premium</string>
    <string name="notification_channel_id">100100</string>
    <string name="wallpapers">Wallpapers</string>
    <string name="see_all">See All</string>
    <string name="hyphen">-----</string>
    <string name="download">Download</string>
    <string name="active_devices">Active Devices</string>
    <string name="active_subsrciption">Active Subscriptions</string>
    <string name="go_premium">Go Premium</string>
    <string name="manage_devices">Manage Devices</string>
    <string name="verify_with_otp">Verify with OTP</string>
  <string name="login_with_pin">Log in using PIN</string>
</resources>
